Completed Unit Tests